fix nav click on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@
 .tooltip-container {
   width: 16em;
   position: absolute;
+  pointer-events: none;
 }
 
 .tooltip {
